infra-hollow-knight/ecs.tf
# Cluster ECS
resource "aws_ecs_cluster" "hollow_cluster" {
  name = "hollow-knight-cluster"
}

# Task Definition para Fargate
resource "aws_ecs_task_definition" "hollow_task" {
  family                   = "hollow-task"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "256"
  memory                   = "512"

  execution_role_arn = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([
    {
      name      = "hollow-container"
      image     = var.app_image          # ej: "tuusuario/hollow-knight-web:1.0"
      essential = true
      portMappings = [
        {
          containerPort = 8080
          hostPort      = 8080
          protocol      = "tcp"
        }
      ]
    }
  ])
}

# Rol de ejecución para ECS (pull de imagen, logs, etc.)
resource "aws_iam_role" "ecs_task_execution_role" {
  name = "ecsTaskExecutionRole-hollow"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ecs-tasks.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "ecs_task_execution_role_policy" {
  role       = aws_iam_role.ecs_task_execution_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

# Servicio ECS que corre la app en Fargate
resource "aws_ecs_service" "hollow_service" {
  name            = "hollow-service"
  cluster         = aws_ecs_cluster.hollow_cluster.id
  task_definition = aws_ecs_task_definition.hollow_task.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    subnets = [
      aws_subnet.public_subnet.id,
      aws_subnet.public_subnet_b.id
    ]
    assign_public_ip = true
    security_groups  = [aws_security_group.ecs_sg.id]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.tg.arn
    container_name   = "hollow-container"
    container_port   = 8080
  }

  depends_on = [
    aws_lb_listener.https_listener
  ]
}
